fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
 
 body {
 background-color: black;
-overflow: hidden;
+overflow-x: hidden;
 }
 
 /* New floating hearts animation */
